--- a/index.html
+++ b/index.html
@@ -198,9 +198,10 @@
     <div class="container">
         <div class="row" >
             <div class="col-12 col-lg-7">
+                <h4 class="mb-0">Гайдлайн у подарунок</h4>
                 <img class="w-100  d-block mb-3" src="images/present.jpg" alt="tomato-photo">
             </div>
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-lg-5 mt-0 mt-md-5">
                 <p class="mb-2 present_first_p text-white"><span class="mb-3 d-block">Що таке гайдлайн і навіщо він потрібний?</span>
                     А тепер про обіцяний бонус: замовляючи фірмовий стиль у нашому агентстві ви отримуєте мінімальний
                     гайдлайн в подарунок, це дозволить вам бути на крок попереду ваших конкурентів!
